--- a/app.json
+++ b/app.json
@@ -23,7 +23,10 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.shubham_kumar.MY-APP",
+      "versionCode": 1,
+      "permissions":["LOCATION"]
     },
     "web": {
       "favicon": "./assets/favicon.png"
